[gd_scene load_steps=2 format=3 uid="uid://lsgjsch2i7xb"]

[ext_resource type="Script" path="res://TalkScript.gd" id="1_ojr2c"]

[node name="ButtfartPLACEHOLDER" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ojr2c")

[node name="LettersTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Panel" type="Panel" parent="."]
z_index = 2
layout_mode = 0
offset_left = 175.0
offset_top = 420.0
offset_right = 975.0
offset_bottom = 620.0

[node name="DialogueBox" type="RichTextLabel" parent="Panel"]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 780.0
offset_bottom = 180.0
theme_override_font_sizes/normal_font_size = 30
scroll_active = false

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
expand_mode = 1

[node name="FadeOverlay" type="ColorRect" parent="."]
z_index = 5
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(1, 1, 1, 0)

[node name="CharacterLeft" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = 168.0
offset_right = 800.0
offset_bottom = 968.0
scale = Vector2(0.6, 0.6)

[node name="CharacterRight" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 672.0
offset_top = 168.0
offset_right = 1472.0
offset_bottom = 968.0
scale = Vector2(0.6, 0.6)
flip_h = true
